syntax = "proto3";
package org.corfudb.infrastructure.logreplication.proto;

/**
 * This is used by replication metadata table in corfu store.
 * The metadata table has the following key-value pairs defined both as strings:
 * One example to show the standby is at log entry sync state:
 * "topologyConfigId": "0"
 * "version": "release-1.0"
 * "lastSnapshotStarted": "100"
 * "lastSnapshotTransferredSeqNumber": "88"
 * "lastSnapshotTransferred": "100"
 * "lastSnapshotApplied": "100"
 * "lastLogEntryProcessed": "168"
 */
message LogReplicationMetadataKey {
  string key = 1;
}

/**
 * This is corresponding values for the keys in the replication
 * metadata table in corfu store. For example:
 * key: "topologyConfigId", val: "1".
 */
message LogReplicationMetadataVal {
  string val = 1;
}

/*
 * Replication Status Key
 */
 message ReplicationStatusKey {
   string clusterId = 1;
 }

/*
 * Replication Status Value
 * Active Site sets the completionPercent, Standby sets the dataConsistent boolean
 */
message ReplicationStatusVal {
  uint64 remainingEntriesToSend = 1;
  bool dataConsistent = 2;
  enum SyncType {
    SNAPSHOT = 0;
    LOG_ENTRY = 1;
  }
  SyncType type = 3;
}

enum ReplicationEventType {
  FORCE_SNAPSHOT_SYNC = 0;
}

message ReplicationEventKey {
  string key = 1;
}
message ReplicationEvent {
  ReplicationEventType type = 1;
  string clusterId = 2;
}